--- a/contact.html
+++ b/contact.html
@@ -48,44 +48,47 @@
                         </div>
                         <div class="row gx-5 justify-content-center">
                                 <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                                    <!-- Name input-->
-                                    <div class="form-floating mb-3">
-                                        <p class="text-center"> Teléfono de contacto: </p>
+                                    <div class="form-floating mb-3"> 
+                                        <p class="custom-text custom-text-center">Teléfono de contacto:</p> 
+                                    </div> 
+                                    <div class="form-floating mb-3"> 
+                                        <p class="custom-text custom-text-center">Correo electrónico:</p> 
                                     </div>
-                                    <!-- Email address input-->
-                                    <div class="form-floating mb-3">
-                                        <p class="text-center"> Correo electrónico: </p>
-                                    </div>
-                                    <!-- Phone number input-->
                                     <div class="form-floating mb-3">
                                         <h1 class="text-center"><i class="bi bi-twitter-x"></i></h1>
                                     </div>
-                                    <!-- Message input-->
                                     <div class="form-floating mb-3">
                                         <h1 class="text-center"><i class="bi bi-instagram"></i></h1>
+                                    </div>
+                                    <div class="form-floating mb-3">
+                                        <h1 class="text-center"><i class="bi bi-facebook"></i></h1>
+                                    </div>
+                                    <div class="form-floating mb-3">
+                                        <h1 class="text-center"><i class="bi bi-linkedin"></i></h1>
                                     </div>
                                 </form>
                             </div>
                         </div>
                     </div>
                     <!-- Contact cards-->
-                    <div class="container py-5">
-                        <div class="d-flex justify-content-center">
-                            <div class="row gx-5 row-cols-1 row-cols-md-2">
-                                <div class="col">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-chat-dots"></i></div>
-                                    <div class="h5 mb-2">Habla con nosotros</div>
-                                    <p class="text-muted mb-0">Contacta con nosotros vía mail o número de teléfono</p>
-                                </div>
-                                <div class="col">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-people"></i></div>
-                                    <div class="h5">Descubre nuestras actividades</div>
-                                    <p class="text-muted mb-0">En nuestras redes sociales X o Instagram, podrás descubrir nuestras actividades</p>
+                    <div class="container py-5 adjusted-div">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-md-10">
+                                <div class="row gx-5 row-cols-1 row-cols-md-2">
+                                    <div class="col-12 col-md-6 text-center mt-5">
+                                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-chat-dots"></i></div>
+                                        <div class="h5 mb-2">Habla con nosotros</div>
+                                        <p class="text-muted mb-0">Contacta con nosotros vía mail o número de teléfono</p>
+                                    </div>
+                                    <div class="col-12 col-md-6 text-center mt-5 adjusted-div">
+                                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-people"></i></div>
+                                        <div class="h5">Descubre nuestras actividades</div>
+                                        <p class="text-muted mb-0">En nuestras redes sociales X o Instagram, podrás descubrir nuestras actividades</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                                                            
+                    </div>                                                                                                    
             </section>
         </main>
         <!-- Footer-->
@@ -103,7 +106,8 @@
                     </div>
                 </div>
             </div>
-        </footer>       <!-- Bootstrap core JS-->
+        </footer>       
+        <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
