--- a/portfolio-overview.html
+++ b/portfolio-overview.html
@@ -9,7 +9,7 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">    <!-- Core theme CSS (includes Bootstrap)-->
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -41,32 +41,31 @@
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="text-center mb-5">
-                        <h1 class="fw-bolder">Our Work</h1>
-                        <p class="lead fw-normal text-muted mb-0">Company portfolio</p>
+                        <h1 class="fw-bolder"> Nuestro trabajo </h1>
                     </div>
                     <div class="row gx-5">
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
                                 <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!"> Nombre del Proyecto </a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
                                 <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!"> Nombre del Proyecto </a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5 mb-lg-0">
                                 <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!"> Nombre del Proyecto </a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative">
                                 <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!"> Nombre del Proyecto </a>
                             </div>
                         </div>
                     </div>
@@ -74,26 +73,27 @@
             </section>
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
-                    <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                    <a class="btn btn-lg btn-primary" href="#!">Contact us</a>
+                    <h2 class="display-4 fw-bolder mb-4"> Construyamos algo juntos </h2>
+                    <a class="btn btn-lg btn-primary" href="contact.html"> Contactanos </a>
                 </div>
             </section>
         </main>
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto">
-            <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2023</div></div>
-                    <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Contact</a>
-                    </div>
+        <div class="container px-5">
+            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                <div class="col-auto">
+                    <div class="small m-0 text-white"> Copyright &copy; 2024</div>
+                </div>
+                <div class="col-auto">
+                    <span class="text-white mx-1">&middot;<i class="bi bi-twitter-x"></i></span>
+                    <span class="text-white mx-1"><i class="bi bi-instagram"></i></span>
+                    <span class="text-white mx-1"><i class="bi bi-facebook"></i></span>
+                    <span class="text-white mx-1"><i class="bi bi-linkedin"></i>&middot;</span>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
