--- a/contact.html
+++ b/contact.html
@@ -45,19 +45,22 @@
                                         <p class="custom-text custom-text-center"> Link de afiliado: </p> 
                                     </div>
                                     <div class="form-floating mb-3"> 
-                                        <p class="custom-text custom-text-center">Correo electrónico:</p> 
+                                        <p class="custom-text custom-text-center"> Correo electrónico: </p> 
+                                    </div>
+                                    <div class="form-floating mb-3"> 
+                                        <p class="custom-text custom-text-center"> Número de teléfono: </p> 
                                     </div>
                                     <div class="form-floating mb-3">
-                                        <h1 class="text-center"><i class="bi bi-twitter-x"></i></h1>
+                                        <h1 class="text-center text-primary"><i class="bi bi-twitter-x"></i></h1>
                                     </div>
                                     <div class="form-floating mb-3">
-                                        <h1 class="text-center"><i class="bi bi-instagram"></i></h1>
+                                        <h1 class="text-center text-primary"><i class="bi bi-instagram colorCorporativo"></i></h1>
                                     </div>
                                     <div class="form-floating mb-3">
-                                        <h1 class="text-center"><i class="bi bi-facebook"></i></h1>
+                                        <h1 class="text-center text-primary"><i class="bi bi-facebook colorCorporativo"></i></h1>
                                     </div>
                                     <div class="form-floating mb-3">
-                                        <h1 class="text-center"><i class="bi bi-linkedin"></i></h1>
+                                        <h1 class="text-center text-primary"><i class="bi bi-linkedin colorCorporativo"></i></h1>
                                     </div>
                                 </form>
                             </div>
