--- a/colaboradores.html
+++ b/colaboradores.html
@@ -26,13 +26,6 @@
                             <li class="nav-item"><a class="nav-link" href="about.html"> Acerca de </a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html"> Contacto </a></li>
                             <li class="nav-item"><a class="nav-link" href="colaboradores.html"> Colaboradores </a></li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Proyectos </a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                    <li><a class="dropdown-item text-black-50 elementHovBackBlack" href="portfolio-overview.html"> Proyecto 1 </a></li>
-                                    <li><a class="dropdown-item text-black-50 elementHovBackBlack" href="portfolio-item.html"> Proyecto 2 </a></li>
-                                </ul>
-                            </li>
                         </ul>
                     </div>
             </nav>
@@ -40,8 +33,7 @@
             <section class="bg-light py-5">
                 <div class="container px-5 my-5">
                     <div class="text-center mb-5">
-                        <h1 class="fw-bolder"> Paga segun tu empresa crezca </h1>
-                        <p class="lead fw-normal text-muted mb-0"> Precios a tu gusto </p>
+                        <h1 class="fw-bolder"> Empresas Colaboradoras </h1>
                     </div>
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
